--- a/index.html
+++ b/index.html
@@ -1,30 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Yejin Kim, Forever Curious</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Yejin Kim!</h1>
-				<p>I'm just practicing to finally build my <em>one -pager</em> <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:yejin.jamie@gmail.com">email</a></li>
-        		<li><a href="https://github.com/yejinjamie">github.com/yejinjamie</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Yejin Kim
+---
+<div class="blurb">
+	<h1>Hi there, I'm Yejin Kim!</h1>
+	<p>I'm just practicing to finally build my <em>one-pager</em>. <a href="/about">Read more about my life...</a></p>
+</div><!-- /.blurb -->
