--- a/about/index.html
+++ b/about/index.html
@@ -1,1 +1,8 @@
-<p>In progress</p>
+<b>What I do for work</b><br>
+Market Research / Event Planning & Execution / Social Media / Inbound Marketing<br><br>
+<b>Education</b><br>
+BSc, Business Administration (Marketing), California State University, Long Beach<br>
+Music minor<br><br>
+
+<em>Forever curious.</em><br>
+I'm motivated by learning something new every day. I want to stay inspired and curious throughout my years, hoping to make a positive dent on the universe.
