--- a/about/index.html
+++ b/about/index.html
@@ -1,3 +1,7 @@
+---
+layout: default
+---
+
 <b>What I do for work</b><br>
 Market Research / Event Planning & Execution / Social Media / Inbound Marketing<br><br>
 <b>Education</b><br>
